Keyboard navigation revised to tabbing. Layout bug fixed.

--- a/tool/style/journeystyle.css
+++ b/tool/style/journeystyle.css
@@ -128,6 +128,14 @@ svg#journey-canvas .card > .focussed {
   stroke-width: 3;
 }
 
+.card.orient-horiz {
+  outline: none;
+}
+
+.card.orient-vert {
+  outline: none;
+}
+
 /* svg#journey-canvas .card.orient-horiz > rect {
   height: 130px;
   width: 240px;
